--- a/index.html
+++ b/index.html
@@ -12,35 +12,27 @@
             font-weight: 400;
             font-style: normal;
         }
-
-      body {
+        body {
         font-family: "Pretendard-Regular";
         margin: 0;
         display: flex;
         justify-content: center;
         background-image: url("./background.png");
       }
-
       .container {
         width: 390px;
-        background-color: white;
+        background-color: black;
         height: 100%;
+        padding-top: 30px;
       }
-
-      .photos {
-        margin-top: 30px;
-      }
-
       .photo-frame {
         background-color: white;
         margin: 15px 20px;
         height: 200px;
-
         background-size: cover;
         position: relative;
         cursor: pointer;
       }
-
       .footer {
         display: flex;
         flex-direction: column;
