--- a/index.html
+++ b/index.html
@@ -63,20 +63,18 @@
       }
 
       .photo-description {
-          color: white;
-          background-color: black;
-
-          width: fit-content;
-          padding: 0 20px;
-          margin-bottom: 10px;
-          border-radius: 10px;
-
-          position: absolute;
-          bottom: 0;
-          transform: translate(-50%);
-          left: 50%;
-
-          opacity: 0;
+        color: white;
+        background-color: black;
+        width: fit-content;
+        padding: 0 20px;
+        margin-bottom: 10px;
+        border-radius: 10px;
+        position: absolute;
+        bottom: 0;
+        transform: translate(-50%);
+        left: 50%;
+        width: max-content;
+        opacity: 0;
 
         }
 
