--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       .f-title {
         font-size: 25px;
         font-weight: 900;
-        color: black;
+        color: white;
       }
       .f-date {
         font-size: 15px;
         font-weight: 500;
-        color: black;
+        color: white;
       }
       #image1 {
         background-image: url('./img1.png');
